[FIX]sap.m.ListItemBase: Content should not overflow
BCP: 1670197830

CR-Id: 012003146900000368762016

--- a/src/sap.m/src/sap/m/themes/base/ListItemBase.less
+++ b/src/sap.m/src/sap/m/themes/base/ListItemBase.less
@@ -27,6 +27,7 @@
 	flex: 1;
 	-ms-flex-negative: 1; /* IE10 does not shrink by auto */
 	max-width: 100%;
+	overflow: hidden;
 }
 
 .sapMLIBTypeNavigation{
